# connectzero

./: .gitignore  README.md  game.py  main.py  mcts.py  policies.py  pyproject.toml  simulation.py  tree.py
connectzero/: batched.py  game.py  model.py  single.py  train.py
tests/: test_mcts_equivalence.py  test_policy_equivalence.py  test_simulation_equivalence.py  test_tree_equivalence.py
