[project]
name = "mcts-connect-four"
version = "0.1.0"
description = "Connect Four agent using Monte Carlo Tree Search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.8.1",
    "numpy>=2.3.5",
    "torch>=2.9.1",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pylance>=0.39.0",
    "pyrefly>=0.42.3",
    "ruff>=0.14.6",
]

[tool]
