[project]
name = "connectzero"
version = "0.1.0"
description = "Connect Four agent using Monte Carlo Tree Search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "equinox>=0.13.2",
    "jax>=0.8.1",
    "jaxlib>=0.8.1",
    "numpy>=2.3.5",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.30",
    "torch>=2.9.1",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "pylance>=0.39.0",
    "pyrefly>=0.42.3",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool]
